@@ -57,6 +57,8 @@ function json=savejson(rootname,obj,varargin)
 %        opt.JSONP [''|string]: to generate a JSONP output (JSON with padding),
 %                         for example, if opt.JSON='foo', the JSON data is
 %                         wrapped inside a function call as 'foo(...);'
+%        opt.UnpackHex [1|0]: conver the 0x[hex code] output by loadjson 
+%                         back to the string form
 %        opt can be replaced by a list of ('param',value) pairs. The param 
 %        string is equivallent to a field in opt.
 % output:
@@ -80,6 +82,7 @@ if(length(varargin)==1 && ischar(varargin{1}))
 else
    opt=varargin2struct(varargin{:});
 end
+opt.IsOctave=exist('OCTAVE_VERSION');
 rootisarray=0;
 rootlevel=1;
 forceroot=jsonopt('ForceRootName',0,opt);
@@ -139,13 +142,13 @@ padding1=repmat(sprintf('\t'),1,level-1);
 padding0=repmat(sprintf('\t'),1,level);
 if(len>1) 
     if(~isempty(name))
-        txt=sprintf('%s"%s": [\n',padding0, name); name=''; 
+        txt=sprintf('%s"%s": [\n',padding0, checkname(name,varargin{:})); name=''; 
     else
         txt=sprintf('%s[\n',padding0); 
     end
 elseif(len==0)
     if(~isempty(name))
-        txt=sprintf('%s"%s": null',padding0, name); name=''; 
+        txt=sprintf('%s"%s": null',padding0, checkname(name,varargin{:})); name=''; 
     else
         txt=sprintf('%snull',padding0); 
     end
@@ -168,14 +171,14 @@ padding0=repmat(sprintf('\t'),1,level);
 sep=',';
 
 if(~isempty(name)) 
-    if(len>1) txt=sprintf('%s"%s": [\n',padding0,name); end
+    if(len>1) txt=sprintf('%s"%s": [\n',padding0,checkname(name,varargin{:})); end
 else
     if(len>1) txt=sprintf('%s[\n',padding0); end
 end
 for e=1:len
   names = fieldnames(item(e));
   if(~isempty(name) && len==1)
-        txt=sprintf('%s%s"%s": {\n',txt,repmat(sprintf('\t'),1,level+(len>1)), name); 
+        txt=sprintf('%s%s"%s": {\n',txt,repmat(sprintf('\t'),1,level+(len>1)), checkname(name,varargin{:})); 
   else
         txt=sprintf('%s%s{\n',txt,repmat(sprintf('\t'),1,level+(len>1))); 
   end
@@ -207,11 +210,11 @@ padding1=repmat(sprintf('\t'),1,level);
 padding0=repmat(sprintf('\t'),1,level+1);
 
 if(~isempty(name)) 
-    if(len>1) txt=sprintf('%s"%s": [\n',padding1,name); end
+    if(len>1) txt=sprintf('%s"%s": [\n',padding1,checkname(name,varargin{:})); end
 else
     if(len>1) txt=sprintf('%s[\n',padding1); end
 end
-isoct=exist('OCTAVE_VERSION');
+isoct=jsonopt('IsOctave',0,varargin{:});
 for e=1:len
     if(isoct)
         val=regexprep(item(e,:),'\\','\\');
@@ -223,7 +226,7 @@ for e=1:len
         val=regexprep(val,'^"','\\"');
     end
     if(len==1)
-        obj=['"' name '": ' '"',val,'"'];
+        obj=['"' checkname(name,varargin{:}) '": ' '"',val,'"'];
 	if(isempty(name)) obj=['"',val,'"']; end
         txt=sprintf('%s%s%s%s',txt,repmat(sprintf('\t'),1,level),obj);
     else
@@ -249,7 +252,7 @@ if(length(size(item))>2 || issparse(item) || ~isreal(item) || jsonopt('ArrayToSt
               padding1,padding0,class(item),padding0,regexprep(mat2str(size(item)),'\s+',',') );
     else
     	txt=sprintf('%s"%s": {\n%s"_ArrayType_": "%s",\n%s"_ArraySize_": %s,\n',...
-              padding1,name,padding0,class(item),padding0,regexprep(mat2str(size(item)),'\s+',',') );
+              padding1,checkname(name,varargin{:}),padding0,class(item),padding0,regexprep(mat2str(size(item)),'\s+',',') );
     end
 else
     if(isempty(name))
@@ -257,9 +260,9 @@ else
     else
         if(numel(item)==1 && jsonopt('NoRowBracket',1,varargin{:})==1)
             numtxt=regexprep(regexprep(matdata2json(item,level+1,varargin{:}),'^\[',''),']','');
-           	txt=sprintf('%s"%s": %s',padding1,name,numtxt);
+           	txt=sprintf('%s"%s": %s',padding1,checkname(name,varargin{:}),numtxt);
         else
-    	    txt=sprintf('%s"%s": %s',padding1,name,matdata2json(item,level+1,varargin{:}));
+    	    txt=sprintf('%s"%s": %s',padding1,checkname(name,varargin{:}),matdata2json(item,level+1,varargin{:}));
         end
     end
     return;
@@ -340,3 +343,30 @@ opt=varargin{1};
 if(isstruct(opt) && isfield(opt,key))
     val=getfield(opt,key);
 end
+%%-------------------------------------------------------------------------
+function newname=checkname(name,varargin)
+isunpack=jsonopt('UnpackHex',1,varargin{:});
+newname=name;
+if(isempty(regexp(name,'0x([0-9a-fA-F]+)_','once')))
+    return
+end
+if(isunpack)
+    isoct=jsonopt('IsOctave',0,varargin{:});
+    if(~isoct)
+        newname=regexprep(name,'(^x|_){1}0x([0-9a-fA-F]+)_','${native2unicode(hex2dec($2))}');
+    else
+        pos=regexp(name,'(^x|_){1}0x([0-9a-fA-F]+)_','start');
+        pend=regexp(name,'(^x|_){1}0x([0-9a-fA-F]+)_','end');
+        if(isempty(pos)) return; end
+        str0=name;
+        pos0=[0 pend(:)' length(name)];
+        newname='';
+        for i=1:length(pos)
+            newname=[newname str0(pos0(i)+1:pos(i)-1) char(hex2dec(str0(pos(i)+3:pend(i)-1)))];
+        end
+        if(pos(end)~=length(name))
+            newname=[newname str0(pos0(end-1)+1:pos0(end))];
+        end
+    end
+end
+
